# aa-imperium-report

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg
aa_imperium_report/: aggregators.py  apps.py  models.py  parsers.py  tasks.py  urls.py  views.py
aa_imperium_report/migrations/: 0001_initial.py
aa_imperium_report/templates/aa_imperium_report/: index.html  report_detail.html  upload_imp_attendance.html  upload_imp_esi.html
