[metadata]
name = aa-imperium-report
version = 0.2.0
description = All-in-One Monthly Alliance Report for Alliance Auth — Imperium Edition
long_description = file: README.md
long_description_content_type = text/markdown
author = YiliFaer / IGC Alliance
url = https://github.com/YOUR_USERNAME/aa-imperium-report
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    allianceauth>=3.0

[options.package_data]
* = templates/**/*.html, static/**/*

[options.extras_require]
dev =
    Django>=4.0
